JumpScript/tests/baselines/reference/functionExpressionInWithBlock.errors.txt
tests/cases/compiler/functionExpressionInWithBlock.jump(2,2): error TS2410: The 'with' statement is not supported. All symbols in a 'with' block will have type 'any'.


==== tests/cases/compiler/functionExpressionInWithBlock.jump (1 errors) ====
    function x() {
     with({}) {
     ~~~~~~~~
!!! error TS2410: The 'with' statement is not supported. All symbols in a 'with' block will have type 'any'.
      function f() {
       () => this;
      }
     }
    }